tests/ui/resolve/resolve-conflict-item-vs-extern-crate.rs
fn std() {}
mod std {}    //~ ERROR the name `std` is defined multiple times

fn main() {
}
